--- a/app/templates/task.html
+++ b/app/templates/task.html
@@ -1,4 +1,4 @@
-<li id="TaskRow{{ task.id }}" class="list-group-item list-group-flush{% if task.completed %} text-muted{% endif %}" value="{{ task.id }}">
+<li id="TaskRow{{ task.id }}" class="list-group-item random list-group-flush{% if task.completed %} text-muted{% endif %}" value="{{ task.id }}">
     <div class="row align-items-center no-gutters">
         <div class="col mr-2">
             <h6 class="mb-0">
