--- a/app/templates/map_card.html
+++ b/app/templates/map_card.html
@@ -1,4 +1,4 @@
-<li id="Incident{{ incident.id }}" class="list-group-item list-group-flush" data-longitude="{{ incident.longitude }}" data-latitude="{{ incident.latitude }}">
+<li id="Incident{{ incident.id }}" class="list-group-item random list-group-flush" data-longitude="{{ incident.longitude }}" data-latitude="{{ incident.latitude }}">
     <div class="row align-items-center no-gutters">
         <div class="col mr-2">
             <h6 class="mb-0">
