--- a/app/templates/incident.html
+++ b/app/templates/incident.html
@@ -156,7 +156,7 @@
 				<p class="card-text"><b>Created:</b> {{ moment(incident.created_at).format('Do MMMM YYYY, h:mma') }}</p>
 				<p class="card-text"><b>Location:</b> {{ incident.location }}</p>
 				<p class="card-text"><b>Description:</b> {{ incident.description }}</p>
-				<p class="card-text"><b>Reported Via:</b> {{ incident.reporting }}</p>
+				<p class="card-text"><b>Reported Via:</b> {{ incident.reported_via }}</p>
 				<p class="card-text"><b>Logged by:</b> <a href="#">{{ incident.created_by_user }}</a></p>
 				<p class="card-text"><b>Reference Number (If Provided):</b> {{ incident.reference }}</p>
 			</div>
