--- a/frontend/src/assets/css/temp.css
+++ b/frontend/src/assets/css/temp.css
@@ -595,3 +595,45 @@ input[type="checkbox"]:hover, input[type="radio"]:hover {
   opacity: 1;
   transition: opacity .15s;
 }
+
+.width-110 {
+  width: 110%;
+}
+
+.multiselect__single {
+  display: none !important;
+}
+
+.multiselect__clear {
+  position: absolute;
+  right: 41px;
+  height: 40px;
+  width: 40px;
+  display: block;
+  cursor: pointer;
+  z-index: 2;
+}
+
+.multiselect__clear::before {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 3px;
+  height: 16px;
+  background: #aaa;
+  top: 12px;
+  right: 4px;
+  transform: rotate(-45deg);
+}
+
+.multiselect__clear::after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 3px;
+  height: 16px;
+  background: #aaa;
+  top: 12px;
+  right: 4px;
+  transform: rotate(45deg);
+}
