--- a/frontend/src/assets/css/temp.css
+++ b/frontend/src/assets/css/temp.css
@@ -276,7 +276,7 @@ li.update-log,
 li.message-right {
   position: relative;
   display: flow-root list-item;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
 }
 
 .update-log-avatar {
@@ -312,8 +312,7 @@ li.update-log > .update-log-text {
 	position: absolute;
 	width: 0;
 	height: 0;
-    top: 13px;
-	border: 8px solid;
+  top: 13px;
 }
 
 li.update-log > .update-log-text:before {
@@ -721,13 +720,16 @@ input[type="checkbox"]:hover, input[type="radio"]:hover {
   padding-left: 0.8rem;
   font-style: italic;
 }
-.editor__content blockquote p {
-  margin: 0;
+
+.editor__content blockquote {
+  margin: 0.5rem 0;
 }
+
 .editor__content img {
   max-width: 100%;
   border-radius: 3px;
 }
+
 .editor__content table {
   border-collapse: collapse;
   table-layout: fixed;
@@ -735,6 +737,7 @@ input[type="checkbox"]:hover, input[type="radio"]:hover {
   margin: 0;
   overflow: hidden;
 }
+
 .editor__content table td, .editor__content table th {
   min-width: 1em;
   border: 2px solid #dddddd;
@@ -743,13 +746,16 @@ input[type="checkbox"]:hover, input[type="radio"]:hover {
   box-sizing: border-box;
   position: relative;
 }
+
 .editor__content table td > *, .editor__content table th > * {
   margin-bottom: 0;
 }
+
 .editor__content table th {
   font-weight: bold;
   text-align: left;
 }
+
 .editor__content table .selectedCell:after {
   z-index: 2;
   position: absolute;
@@ -761,6 +767,7 @@ input[type="checkbox"]:hover, input[type="radio"]:hover {
   background: rgba(200, 200, 255, 0.4);
   pointer-events: none;
 }
+
 .editor__content table .column-resize-handle {
   position: absolute;
   right: -2px;
@@ -771,10 +778,12 @@ input[type="checkbox"]:hover, input[type="radio"]:hover {
   background-color: #adf;
   pointer-events: none;
 }
+
 .editor__content .tableWrapper {
   margin: 1em 0;
   overflow-x: auto;
 }
+
 .editor__content .resize-cursor {
   cursor: ew-resize;
   cursor: col-resize;
@@ -786,7 +795,7 @@ input[type="checkbox"]:hover, input[type="radio"]:hover {
   z-index: 20;
   background: #000000;
   border-radius: 5px;
-  padding: 0.3rem;
+  padding: 0.1rem;
   margin-bottom: 0.5rem;
   transform: translateX(-50%);
   visibility: hidden;
@@ -802,7 +811,6 @@ input[type="checkbox"]:hover, input[type="radio"]:hover {
   background: transparent;
   border: 0;
   color: #ffffff;
-  padding: 0.2rem 0.5rem;
   margin-right: 0.2rem;
   border-radius: 3px;
   cursor: pointer;
@@ -894,18 +902,63 @@ li[data-done=false] {
   margin-bottom: 0px;
 }
 
+.comment-box-empty > .ProseMirror {
+  border: 1.5px solid #e74c3c !important;
+}
+
 .comment-icon {
   top: -30px;
   left: 35px;
   position: relative;
 }
 
-.comment-icon:hover {
+.comment-cancel-icon {
+  top: -30px;
+  left: 45px;
+  position: relative;
+}
+
+.fas.fa-paper-plane:hover:not(.comment-empty) {
   cursor: pointer;
   color: #4e73df;
+}
+
+.fas.fa-check:hover:not(.comment-empty) {
+  cursor: pointer;
+  color: #1cc88a;
+}
+
+.fas.fa-times:hover {
+  cursor: pointer;
+  color: #e74c3c;
+}
+
+.comment-empty:hover {
+  cursor: pointer;
+  color: #e74c3c;
 }
 
 .update-log-text > .editor__content > .ProseMirror {
   padding: 0px;
   border: none;
+}
+
+.fas.fa-ellipsis-v {
+  font-size: 0.9em;
+}
+
+.fas.fa-ellipsis-v:hover {
+  cursor: pointer;
+}
+
+.comment-public-text {
+  background-color: #f8f9fc7a;
+  padding: 12px;
+  border-radius: 6px;
+  color: #263959;
+  box-shadow: inset 0 0 8px #e7e9ee;
+}
+
+.editor__content.comment-public-text p{
+  margin-bottom: 0px !important;
 }
