--- a/frontend/src/assets/css/sb-admin-2.css
+++ b/frontend/src/assets/css/sb-admin-2.css
@@ -20,14 +20,14 @@
   --yellow: #FFC312;
   --green: #1cc88a;
   --teal: #20c9a6;
-  --cyan: #00a8ff;
+  --cyan: #00aafc;
   --white: #fff;
   --gray: #858796;
   --gray-dark: #5a5c69;
   --primary: #4e73df;
   --secondary: #858796;
   --success: #1cc88a;
-  --info: #00a8ff;
+  --info: #00aafc;
   --warning: #FFC312;
   --danger: #e74c3c;
   --light: #f8f9fc;
@@ -1341,6 +1341,10 @@ pre code {
   }
 }
 
+.text-default {
+  color: #32325d !important;
+}
+
 .table {
   width: 100%;
   margin-bottom: 1rem;
@@ -1813,7 +1817,8 @@ select.form-control:focus::-ms-value {
   padding: 0.25rem 0.5rem;
   font-size: 0.875rem;
   line-height: 1.5;
-  border-radius: 0.2rem;
+  border-radius: 0.35rem;
+  border: 1px solid #d1d3e2;
 }
 
 .form-control-lg {
@@ -2341,8 +2346,8 @@ fieldset:disabled a.btn {
 
 .btn-info {
   color: #fff;
-  background-color: #00a8ff;
-  border-color: #00a8ff;
+  background-color: #00aafc;
+  border-color: #00aafc;
 }
 
 .btn-info:hover {
@@ -2357,14 +2362,14 @@ fieldset:disabled a.btn {
 
 .btn-info.disabled, .btn-info:disabled {
   color: #fff;
-  background-color: #00a8ff;
-  border-color: #00a8ff;
+  background-color: #00aafc;
+  border-color: #00aafc;
 }
 
 .btn-info:not(:disabled):not(.disabled):active, .btn-info:not(:disabled):not(.disabled).active,
 .show > .btn-info.dropdown-toggle {
   color: #fff;
-  background-color: #2a96a5;
+  background-color: #068ace;
   border-color: #278c9b;
 }
 
@@ -2666,14 +2671,14 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-info {
-  color: #00a8ff;
-  border-color: #00a8ff;
+  color: #00aafc;
+  border-color: #00aafc;
 }
 
 .btn-outline-info:hover {
   color: #fff;
-  background-color: #00a8ff;
-  border-color: #00a8ff;
+  background-color: #00aafc;
+  border-color: #00aafc;
 }
 
 .btn-outline-info:focus, .btn-outline-info.focus {
@@ -2681,15 +2686,15 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-info.disabled, .btn-outline-info:disabled {
-  color: #00a8ff;
+  color: #00aafc;
   background-color: transparent;
 }
 
 .btn-outline-info:not(:disabled):not(.disabled):active, .btn-outline-info:not(:disabled):not(.disabled).active,
 .show > .btn-outline-info.dropdown-toggle {
   color: #fff;
-  background-color: #00a8ff;
-  border-color: #00a8ff;
+  background-color: #00aafc;
+  border-color: #00aafc;
 }
 
 .btn-outline-info:not(:disabled):not(.disabled):active:focus, .btn-outline-info:not(:disabled):not(.disabled).active:focus,
@@ -4807,12 +4812,12 @@ a.badge-success:focus, a.badge-success.focus {
 
 .badge-info {
   color: #fff;
-  background-color: #00a8ff;
+  background-color: #00aafc;
 }
 
 a.badge-info:hover, a.badge-info:focus {
   color: #fff;
-  background-color: #2a96a5;
+  background-color: #068ace;
 }
 
 a.badge-info:focus, a.badge-info.focus {
@@ -5589,7 +5594,7 @@ a.close.disabled {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 1040;
+  z-index: auto;
   width: 100vw;
   height: 100vh;
   opacity: 0.5;
@@ -6276,13 +6281,13 @@ button.bg-success:focus {
 }
 
 .bg-info {
-  background-color: #00a8ff !important;
+  background-color: #00aafc !important;
 }
 
 a.bg-info:hover, a.bg-info:focus,
 button.bg-info:hover,
 button.bg-info:focus {
-  background-color: #2a96a5 !important;
+  background-color: #068ace !important;
 }
 
 .bg-Standard, .bg-warning {
@@ -6390,7 +6395,7 @@ button.bg-dark:focus {
 }
 
 .border-info {
-  border-color: #00a8ff !important;
+  border-color: #00aafc !important;
 }
 
 .border-warning {
@@ -6447,6 +6452,7 @@ button.bg-dark:focus {
 
 .rounded-circle {
   border-radius: 50% !important;
+  box-shadow: 0 0 0 1px rgba(185,187,190,.3), 0 2px 10px 0 rgba(0,0,0,.1);
 }
 
 .rounded-pill {
@@ -9435,11 +9441,11 @@ a.text-success:hover, a.text-success:focus {
 }
 
 .text-info {
-  color: #00a8ff !important;
+  color: #00aafc !important;
 }
 
 a.text-info:hover, a.text-info:focus {
-  color: #00a8ff !important;
+  color: #00aafc !important;
 }
 
 .text-Standard, .text-warning {
@@ -9475,6 +9481,10 @@ a.text-danger:hover, a.text-danger:focus {
 
 .text-dark {
   color: #5a5c69 !important;
+}
+
+.text-black {
+  color: #32325d !important;
 }
 
 a.text-dark:hover, a.text-dark:focus {
@@ -9741,8 +9751,8 @@ a:focus {
 }
 
 .bg-gradient-info {
-  background-color: #00a8ff;
-  background-image: linear-gradient(180deg, #00a8ff 10%, #258391 100%);
+  background-color: #00aafc;
+  background-image: linear-gradient(180deg, #00aafc 10%, #258391 100%);
   background-size: cover;
 }
 
@@ -9892,11 +9902,11 @@ a:focus {
 }
 
 .border-left-info {
-  border-left: 0.25rem solid #00a8ff !important;
+  border-left: 0.25rem solid #00aafc !important;
 }
 
 .border-bottom-info {
-  border-bottom: 0.25rem solid #00a8ff !important;
+  border-bottom: 0.25rem solid #00aafc !important;
 }
 
 .border-left-Standard, .border-left-warning {
