--- a/frontend/src/assets/css/temp.css
+++ b/frontend/src/assets/css/temp.css
@@ -63,10 +63,6 @@
   opacity: 1;
 }
 
-.task-checkbox {
-  margin-right: 0.4rem;
-}
-
 .deployments_brand_img {
   height: 80%;
 }
@@ -85,14 +81,18 @@
   cursor: pointer;
 }
 
-input[type=checkbox][disabled]{
-  cursor: not-allowed;
-}
-
-.list-group-item.list-group-flush:hover,
+.task:hover,
 tbody > tr:hover {
   cursor: pointer;
   background-color: #f6f8fe !important;
+}
+
+.subtask:first-child {
+  border-radius: 10px 10px 0px 0px;
+}
+
+.subtask:last-child {
+  border-radius: 0px 0px 10px 10px;
 }
 
 /*!
@@ -125,6 +125,7 @@ MODIFIED VERSION
   width: 36px;
   height: 36px;
   margin-right: 10px;
+  box-shadow: 0 0 0 1px rgba(185,187,190,.3), 0 2px 10px 0 rgba(0,0,0,.1);
 }
 
 .update-body,
@@ -236,6 +237,7 @@ MODIFIED VERSION
   }
 }
 
+.btn-info.dropdown-toggle::after,
 .btn-warning.dropdown-toggle::after {
     margin-top: 16px;
     margin-right: 8px;
@@ -298,7 +300,7 @@ li.update-log > .update-log-avatar {
   border-radius: 4px;
   background-color: #fff;
   color: #263959;
-  box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.025);
+  box-shadow: 0 0 0 1px rgba(185,187,190,.3), 0 2px 10px 0 rgba(0,0,0,.1);
 }
 
 li.update-log > .update-log-text {
@@ -444,7 +446,7 @@ input[type=radio]:checked::after {
   content: '\f192';
 }
 
-input[type="checkbox"]:hover, input[type="radio"]:hover {
+input[type="checkbox"]:hover:not([disabled]), input[type="radio"]:hover {
   cursor: pointer;
 }
 
@@ -456,7 +458,7 @@ input[type="checkbox"]:hover, input[type="radio"]:hover {
 }
 
 .tag-active {
-  background-color: #00a8ff;
+  background-color: #00aafc;
 }
 
 .tag-undo {
@@ -923,19 +925,19 @@ li[data-done=false] {
   color: #4e73df;
 }
 
-.fas.fa-check:hover:not(.comment-empty) {
+.fas.fa-check.float-right:hover:not(.comment-empty) {
   cursor: pointer;
-  color: #1cc88a;
+  color: #1cc88a !important;
 }
 
 .fas.fa-times:hover {
   cursor: pointer;
-  color: #e74c3c;
+  color: #e74c3c !important;
 }
 
 .comment-empty:hover {
   cursor: pointer;
-  color: #e74c3c;
+  color: #e74c3c !important;
 }
 
 .update-log-text > .editor__content > .ProseMirror {
@@ -956,9 +958,17 @@ li[data-done=false] {
   padding: 12px;
   border-radius: 6px;
   color: #263959;
-  box-shadow: inset 0 0 8px #e7e9ee;
+  box-shadow: 0 0 0 1px rgba(185,187,190,.3), 0 2px 10px 0 rgba(0,0,0,.1);
 }
 
 .editor__content.comment-public-text p{
   margin-bottom: 0px !important;
+}
+
+.delete-subtask {
+  border: 1px solid rgba(0, 0, 0, 0.125);
+  padding: 0.75rem 1.25rem;
+  border-radius: 5px;
+  margin: 1.5rem 0px !important;
+  box-shadow: 0 0 0 1px rgba(185,187,190,.3), 0 2px 10px 0 rgba(0,0,0,.1);
 }
