--- a/frontend/src/assets/css/temp.css
+++ b/frontend/src/assets/css/temp.css
@@ -601,6 +601,24 @@ input[type="checkbox"]:hover:not([disabled]), input[type="radio"]:hover {
   width: 110%;
 }
 
+.width-15 {
+  width: 15rem;
+}
+
+h6 > .text-xs {
+  white-space: nowrap;
+}
+
+h6 > input {
+  width: 60%;
+}
+
+.d-flex > .multiselect {
+  max-width: 60%;
+  margin-left: 1.4rem;
+  margin-top: 5px;
+}
+
 .multiselect__single {
   display: none !important;
 }
@@ -676,16 +694,19 @@ input[type="checkbox"]:hover:not([disabled]), input[type="radio"]:hover {
 
 .editor {
   position: relative;
-  max-width: 30rem;
+  max-width: 95%;
 }
+
 .editor__content {
   overflow-wrap: break-word;
   word-wrap: break-word;
   word-break: break-word;
 }
+
 .editor__content * {
   caret-color: currentColor;
 }
+
 .editor__content pre {
   padding: 0.7rem 1rem;
   border-radius: 5px;
@@ -694,9 +715,11 @@ input[type="checkbox"]:hover:not([disabled]), input[type="radio"]:hover {
   font-size: 0.8rem;
   overflow-x: auto;
 }
+
 .editor__content pre code {
   display: block;
 }
+
 .editor__content p code {
   display: inline-block;
   padding: 0 0.4rem;
@@ -706,10 +729,12 @@ input[type="checkbox"]:hover:not([disabled]), input[type="radio"]:hover {
   background: rgba(0, 0, 0, 0.1);
   color: rgba(0, 0, 0, 0.8);
 }
+
 .editor__content ul,
 .editor__content ol {
   padding-left: 1rem;
 }
+
 .editor__content li > p,
 .editor__content li > ol,
 .editor__content li > ul {
@@ -804,10 +829,12 @@ input[type="checkbox"]:hover:not([disabled]), input[type="radio"]:hover {
   opacity: 0;
   transition: opacity 0.2s, visibility 0.2s;
 }
+
 .menububble.is-active {
   opacity: 1;
   visibility: visible;
 }
+
 .menububble__button {
   display: inline-flex;
   background: transparent;
@@ -817,19 +844,24 @@ input[type="checkbox"]:hover:not([disabled]), input[type="radio"]:hover {
   border-radius: 3px;
   cursor: pointer;
 }
+
 .menububble__button:last-child {
   margin-right: 0;
 }
+
 .menububble__button:hover {
   background-color: rgba(255, 255, 255, 0.1);
 }
+
 .menububble__button.is-active {
   background-color: rgba(255, 255, 255, 0.2);
 }
+
 .menububble__form {
   display: flex;
   align-items: center;
 }
+
 .menububble__input {
   font: inherit;
   border: none;
@@ -910,7 +942,7 @@ li[data-done=false] {
 
 .comment-icon {
   top: -30px;
-  left: 35px;
+  left: 30px;
   position: relative;
 }
 
@@ -925,7 +957,11 @@ li[data-done=false] {
   color: #4e73df;
 }
 
-.fas.fa-check.float-right:hover:not(.comment-empty) {
+.subtask-edit {
+  margin-top: 15px;
+}
+
+.fas.fa-check.hover:hover:not(.comment-empty) {
   cursor: pointer;
   color: #1cc88a !important;
 }
@@ -971,4 +1007,26 @@ li[data-done=false] {
   border-radius: 5px;
   margin: 1.5rem 0px !important;
   box-shadow: 0 0 0 1px rgba(185,187,190,.3), 0 2px 10px 0 rgba(0,0,0,.1);
+}
+
+.half-opacity {
+  opacity: 0.5
+}
+
+.update-log-text:hover + .half-opacity {
+  opacity: 1
+}
+
+.multiselect__tags:hover {
+  cursor: pointer;
+}
+
+.hover-primary:hover {
+  color: #4e73df !important;
+  cursor: pointer;
+}
+
+.hover-danger:hover {
+  color: #e74c3c !important;
+  cursor: pointer;
 }
