--- a/frontend/src/assets/css/temp.css
+++ b/frontend/src/assets/css/temp.css
@@ -136,7 +136,7 @@ MODIFIED VERSION
   padding: 5px 10px;
   font-size: 10px;
   color: #fff;
-  background-color: #6a8ef5;
+  background-color: #367fec;
   -webkit-border-radius: 3px;
   border-radius: 3px;
   -webkit-transition: background-color 0.2s;
@@ -165,7 +165,7 @@ MODIFIED VERSION
   width: 12px;
   height: 12px;
   background-color: #f5f5f5;
-  border: 2px solid #6a8ef5;
+  border: 2px solid #367fec;
   z-index: 1;
   -webkit-border-radius: 50%;
   border-radius: 50%;
@@ -179,7 +179,7 @@ MODIFIED VERSION
 }
 .activity > li > div .media:hover::before,
 .activity > li > div + div .media:hover::before {
-  border-color: #4e73df;
+  border-color: #0061f2;
 }
 
 .activity > li:not(:last-child) > div:before, .activity > li:last-child > div:not(:last-child)::before {
@@ -211,11 +211,11 @@ MODIFIED VERSION
 
 .update-log-text:hover .update-body,
 .activity > li > div:hover .media-body {
-  background-color: #4e73df;
+  background-color: #0061f2;
 }
 
 .activity > li > div:hover i::before{
- color: #4e73df !important;
+ color: #0061f2 !important;
 }
 
 .activity-icon {
@@ -448,26 +448,6 @@ input[type=radio]:checked::after {
 
 input[type="checkbox"]:hover:not([disabled]), input[type="radio"]:hover {
   cursor: pointer;
-}
-
-.tag-cloud li {
-  margin: 3px;
-  padding: 7px;
-  font-size: 1em;
-  cursor: pointer;
-}
-
-.tag-active {
-  background-color: #00aafc;
-}
-
-.tag-undo {
-  color: #fff;
-  margin-left: 10px;
-}
-
-.tag-undo:hover{
-  color: #fff;
 }
 
 .list-inline > li {
@@ -954,7 +934,7 @@ li[data-done=false] {
 
 .fas.fa-paper-plane:hover:not(.comment-empty) {
   cursor: pointer;
-  color: #4e73df;
+  color: #0061f2;
 }
 
 .subtask-edit {
@@ -1022,11 +1002,15 @@ li[data-done=false] {
 }
 
 .hover-primary:hover {
-  color: #4e73df !important;
+  color: #0061f2 !important;
   cursor: pointer;
 }
 
 .hover-danger:hover {
   color: #e74c3c !important;
+  cursor: pointer;
+}
+
+.form-control-plaintext:hover {
   cursor: pointer;
 }
