--- a/frontend/src/assets/css/sb-admin-2.css
+++ b/frontend/src/assets/css/sb-admin-2.css
@@ -18,7 +18,7 @@
   --red: #f44336;
   --orange: #ff8300;
   --yellow: #f9ce2f;
-  --green: #00df73;
+  --green: #02df90;
   --teal: #20c9a6;
   --cyan: #00b0ff;
   --white: #fff;
@@ -26,7 +26,7 @@
   --gray-dark: #5a5c69;
   --primary: #0061f2;
   --secondary: #858796;
-  --success: #00df73;
+  --success: #02df90;
   --info: #00b0ff;
   --warning: #f9ce2f;
   --danger: #f44336;
@@ -1894,7 +1894,7 @@ textarea.form-control {
   width: 100%;
   margin-top: 0.25rem;
   font-size: 80%;
-  color: #00df73;
+  color: #02df90;
 }
 
 .valid-tooltip {
@@ -1913,7 +1913,7 @@ textarea.form-control {
 }
 
 .was-validated .form-control:valid, .form-control.is-valid {
-  border-color: #00df73;
+  border-color: #02df90;
   padding-right: calc(1.5em + 0.75rem);
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%231cc88a' d='M2.3 6.73L.6 4.53c-.4-1.04.46-1.4 1.1-.8l1.1 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-4 4.6c-.43.5-.8.4-1.1.1z'/%3e%3c/svg%3e");
   background-repeat: no-repeat;
@@ -1922,7 +1922,7 @@ textarea.form-control {
 }
 
 .was-validated .form-control:valid:focus, .form-control.is-valid:focus {
-  border-color: #00df73;
+  border-color: #02df90;
   box-shadow: 0 0 0 0.2rem rgba(28, 200, 138, 0.25);
 }
 
@@ -1938,13 +1938,13 @@ textarea.form-control {
 }
 
 .was-validated .custom-select:valid, .custom-select.is-valid {
-  border-color: #00df73;
+  border-color: #02df90;
   padding-right: calc((1em + 0.75rem) * 3 / 4 + 1.75rem);
   background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3e%3cpath fill='%235a5c69' d='M2 0L0 2h4zm0 5L0 3h4z'/%3e%3c/svg%3e") no-repeat right 0.75rem center/8px 10px, url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%231cc88a' d='M2.3 6.73L.6 4.53c-.4-1.04.46-1.4 1.1-.8l1.1 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-4 4.6c-.43.5-.8.4-1.1.1z'/%3e%3c/svg%3e") #fff no-repeat center right 1.75rem/calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
 }
 
 .was-validated .custom-select:valid:focus, .custom-select.is-valid:focus {
-  border-color: #00df73;
+  border-color: #02df90;
   box-shadow: 0 0 0 0.2rem rgba(28, 200, 138, 0.25);
 }
 
@@ -1961,7 +1961,7 @@ textarea.form-control {
 }
 
 .was-validated .form-check-input:valid ~ .form-check-label, .form-check-input.is-valid ~ .form-check-label {
-  color: #00df73;
+  color: #02df90;
 }
 
 .was-validated .form-check-input:valid ~ .valid-feedback,
@@ -1971,11 +1971,11 @@ textarea.form-control {
 }
 
 .was-validated .custom-control-input:valid ~ .custom-control-label, .custom-control-input.is-valid ~ .custom-control-label {
-  color: #00df73;
+  color: #02df90;
 }
 
 .was-validated .custom-control-input:valid ~ .custom-control-label::before, .custom-control-input.is-valid ~ .custom-control-label::before {
-  border-color: #00df73;
+  border-color: #02df90;
 }
 
 .was-validated .custom-control-input:valid ~ .valid-feedback,
@@ -1994,11 +1994,11 @@ textarea.form-control {
 }
 
 .was-validated .custom-control-input:valid:focus:not(:checked) ~ .custom-control-label::before, .custom-control-input.is-valid:focus:not(:checked) ~ .custom-control-label::before {
-  border-color: #00df73;
+  border-color: #02df90;
 }
 
 .was-validated .custom-file-input:valid ~ .custom-file-label, .custom-file-input.is-valid ~ .custom-file-label {
-  border-color: #00df73;
+  border-color: #02df90;
 }
 
 .was-validated .custom-file-input:valid ~ .valid-feedback,
@@ -2008,7 +2008,7 @@ textarea.form-control {
 }
 
 .was-validated .custom-file-input:valid:focus ~ .custom-file-label, .custom-file-input.is-valid:focus ~ .custom-file-label {
-  border-color: #00df73;
+  border-color: #02df90;
   box-shadow: 0 0 0 0.2rem rgba(28, 200, 138, 0.25);
 }
 
@@ -2308,14 +2308,14 @@ fieldset:disabled a.btn {
 
 .btn-success {
   color: #fff;
-  background-color: #00df73;
-  border-color: #00df73;
+  background-color: #02df90;
+  border-color: #02df90;
 }
 
 .btn-success:hover {
   color: #fff;
-  background-color: #03bb62;
-  border-color: #03bb62;
+  background-color: #02bf7b;
+  border-color: #02bf7b;
 }
 
 .btn-success:focus, .btn-success.focus {
@@ -2324,15 +2324,15 @@ fieldset:disabled a.btn {
 
 .btn-success.disabled, .btn-success:disabled {
   color: #fff;
-  background-color: #00df73;
-  border-color: #00df73;
+  background-color: #02df90;
+  border-color: #02df90;
 }
 
 .btn-success:not(:disabled):not(.disabled):active, .btn-success:not(:disabled):not(.disabled).active,
 .show > .btn-success.dropdown-toggle {
   color: #fff;
-  background-color: #03bb62;
-  border-color: #03bb62;
+  background-color: #02bf7b;
+  border-color: #02bf7b;
 }
 
 .btn-success:not(:disabled):not(.disabled):active:focus, .btn-success:not(:disabled):not(.disabled).active:focus,
@@ -2635,14 +2635,14 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-success {
-  color: #00df73;
-  border-color: #00df73;
+  color: #02df90;
+  border-color: #02df90;
 }
 
 .btn-outline-success:hover {
   color: #fff;
-  background-color: #00df73;
-  border-color: #00df73;
+  background-color: #02df90;
+  border-color: #02df90;
 }
 
 .btn-outline-success:focus, .btn-outline-success.focus {
@@ -2650,15 +2650,15 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-success.disabled, .btn-outline-success:disabled {
-  color: #00df73;
+  color: #02df90;
   background-color: transparent;
 }
 
 .btn-outline-success:not(:disabled):not(.disabled):active, .btn-outline-success:not(:disabled):not(.disabled).active,
 .show > .btn-outline-success.dropdown-toggle {
   color: #fff;
-  background-color: #00df73;
-  border-color: #00df73;
+  background-color: #02df90;
+  border-color: #02df90;
 }
 
 .btn-outline-success:not(:disabled):not(.disabled):active:focus, .btn-outline-success:not(:disabled):not(.disabled).active:focus,
@@ -3306,6 +3306,7 @@ button.dropdown-toggle::after {
   flex: 1 1 auto;
   width: 1%;
   margin-bottom: 0;
+  border-color: #eff0f5 !important;
 }
 
 .input-group > .form-control + .form-control,
@@ -4800,12 +4801,12 @@ a.badge-secondary:focus, a.badge-secondary.focus {
 
 .badge-success {
   color: #fff;
-  background-color: #00df73;
+  background-color: #02df90;
 }
 
 a.badge-success:hover, a.badge-success:focus {
   color: #fff;
-  background-color: #03bb62;
+  background-color: #02bf7b;
 }
 
 a.badge-success:focus, a.badge-success.focus {
@@ -6274,13 +6275,13 @@ button.bg-secondary:focus {
 }
 
 .bg-success {
-  background-color: #00df73 !important;
+  background-color: #02df90 !important;
 }
 
 a.bg-success:hover, a.bg-success:focus,
 button.bg-success:hover,
 button.bg-success:focus {
-  background-color: #03bb62 !important;
+  background-color: #02bf7b !important;
 }
 
 .bg-info {
@@ -6394,7 +6395,7 @@ button.bg-dark:focus {
 }
 
 .border-success {
-  border-color: #00df73 !important;
+  border-color: #02df90 !important;
 }
 
 .border-info {
@@ -9436,11 +9437,11 @@ a.text-secondary:hover, a.text-secondary:focus {
 }
 
 .text-success {
-  color: #00df73 !important;
+  color: #02df90 !important;
 }
 
 a.text-success:hover, a.text-success:focus {
-  color: #03bb62 !important;
+  color: #02bf7b !important;
 }
 
 .text-info {
@@ -9748,8 +9749,8 @@ a:focus {
 }
 
 .bg-gradient-success {
-  background-color: #00df73;
-  background-image: linear-gradient(180deg, #00df73 10%, #03bb62 100%);
+  background-color: #02df90;
+  background-image: linear-gradient(180deg, #02df90 10%, #02bf7b 100%);
   background-size: cover;
 }
 
@@ -9901,11 +9902,11 @@ a:focus {
 }
 
 .border-left-success {
-  border-left: 0.25rem solid #00df73 !important;
+  border-left: 0.25rem solid #02df90 !important;
 }
 
 .border-bottom-success {
-  border-bottom: 0.25rem solid #00df73 !important;
+  border-bottom: 0.25rem solid #02df90 !important;
 }
 
 .border-left-info {
